--- a/TableTopInc.API/TableTopInc.API.Engine.AzureStorage/TableTopInc.API.Engine.AzureStorage.csproj
+++ b/TableTopInc.API/TableTopInc.API.Engine.AzureStorage/TableTopInc.API.Engine.AzureStorage.csproj
@@ -9,8 +9,8 @@
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.Azure.CosmosDB.Table" Version="2.0.0" />
-      <PackageReference Include="Microsoft.Azure.Storage.Common" Version="9.4.2" />
+      <PackageReference Include="AutoMapper" Version="8.0.0" />
+      <PackageReference Include="WindowsAzure.Storage" Version="9.3.1" />
     </ItemGroup>
 
 </Project>
