--- a/TableTopInc.API/TableTopInc.API.Public/TableTopInc.API.Public.csproj
+++ b/TableTopInc.API/TableTopInc.API.Public/TableTopInc.API.Public.csproj
@@ -4,10 +4,10 @@
     <AzureFunctionsVersion></AzureFunctionsVersion>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.Azure.CosmosDB.Table" Version="2.0.0" />
-    <PackageReference Include="Microsoft.Azure.Storage.Common" Version="9.4.2" />
+    <PackageReference Include="AutoMapper" Version="8.0.0" />
     <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.Storage" Version="3.0.2" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.22" />
+    <PackageReference Include="WindowsAzure.Storage" Version="9.3.1" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
